# blackboxai-1742422969427

./: CMakeLists.txt  README.md  index.html
doc/: README.md  integration-guide.md
ned/: SimulationNetwork.ned
simulations/: omnetpp.ini
simulations/scenarios/urban/: launchd.xml  urban.net.xml  urban.rou.xml  urban.sumo.cfg
src/nr/: ModeSwitchController.cc  ModeSwitchController.h  NRModule.cc  NRModule.h  ResourceManager.cc  ResourceManager.h
